brat/test/golden/error/bad_underscore.brat.golden
Error in test/golden/error/bad_underscore.brat@2:12
uscore = { i => _ }
           ^^^^^^

  Elab error "Noun required at this position"

